Fixed some paddings

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Here you find the latest games at exclusive prices.">
+    <meta name="keywords" content="ggs4all, gaming, ps5, consoles, game store">
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,200;0,400;1,700&display=swap" rel="stylesheet">   
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -107,12 +109,12 @@
       </id>
       </section>
     <!--blassa dial lo3aab-->
-    <section class="text-gray-400 bg-gray-900 body-font">
-      <div class="container px-5 py-24 mx-auto" style="background-color: black;">
+    <section class="text-gray-400 bg-black body-font">
+      <div class="container px-5 pt-16 mx-auto" style="background-color: black;">
         <div class="flex flex-col text-center w-full mb-12">
           <span class=>
             <i class="fi-rr-crown"></i>
-            <h1 class="text-2xl font-medium title-font mb-4 text-white">Exclusive Games</h1>
+            <h1 class="text-2xl font-medium text-white sm:text-3xl title-font">Exclusive Games</h1><br>
           </span>
           <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Welcome dear client, On the occasion of our opening we suggest to you some of the best free games that you could find in GGS4ALL. <b>The games are limited by time.</b> </p>
         </div>
@@ -207,7 +209,7 @@
     <section class="text-gray-400 bg-black body-font">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-col text-center w-full mb-12">
-          <h1 class="text-2xl font-medium title-font mb-4 text-white">FREE GAMES</h1>
+          <h1 class="text-2xl font-medium text-white sm:text-3xl title-font">FREE GAMES</h1><br>
           <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Welcome dear client, On the occasion of our opening we suggest to you some of the best free games that you could find in GGS4ALL. <b>The games are limited by time.</b> </p>
         </div>
         <div class="flex flex-wrap mx-32 rounded-2xl p-2 bg-gray-700">
@@ -325,7 +327,7 @@
 
     <section class="text-gray-400 bg-black body-font">
         
-      <div class="container px-5 py-20 mx-auto">
+      <div class="container px-5 pb-16 mx-auto">
             <div  class="flex flex-row">
                 
                    <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
@@ -369,7 +371,7 @@
         <div class="flex flex-col text-center w-full mb-12">
           <span class=>
             <i class="fi-rr-crown"></i>
-            <h1 class="text-2xl font-medium title-font mb-4 text-white">Top Games</h1>
+            <h1 class="text-2xl font-medium text-white sm:text-3xl title-font">Top Games</h1><br>
           </span>
           <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Welcome dear client, On the occasion of our opening we suggest to you some of the best free games that you could find in GGS4ALL. <b>The games are limited by time.</b> </p>
         </div>
@@ -485,13 +487,13 @@
 
 
     <!-- hady hya la partie li khdamin 3liha -->
-    <section class="py-24 text-gray-400 bg-black body-font">
+    <section class="py-6 text-gray-400 bg-black body-font">
         <div class="mb-20 text-center">
             <img src="" alt="">
             <h1 class="mb-4 text-2xl font-medium text-white sm:text-3xl title-font">GGS4ALL in Numbers</h1>
             <p class="mx-auto text-base leading-relaxed text-gray-400 xl:w-2/4 lg:w-3/4 text-opacity-80">We pushed boundaries we couldn't imagine</p>
             <div class="flex justify-center mt-6">
-            <div class="inline-flex w-16 h-1 bg-indigo-500 rounded-full"></div>
+            <div class="inline-flex w-16 h-1 bg-pink-500 rounded-full"></div>
             </div>
         </div> 
 
@@ -641,13 +643,13 @@ round: 1 // Will round the animated value to 1 decimal
 
     <!-- Companies we worked with -->
 
-    <section class="py-24 text-gray-400 bg-black body-font">
+    <section class="py-6 text-gray-400 bg-black body-font">
       <div class="text-center">
           <img src="" alt="">
           <h1 class="mb-4 text-2xl font-medium text-white sm:text-3xl title-font">Companies we worked with</h1>
           <p class="mx-auto text-base leading-relaxed text-gray-400 xl:w-2/4 lg:w-3/4 text-opacity-80">More than 15 local and international companies.</p>
           <div class="flex justify-center mt-6">
-          <div class="inline-flex w-16 h-1 bg-indigo-500 rounded-full"></div>
+          <div class="inline-flex w-16 h-1 bg-pink-500 rounded-full"></div>
           </div>
       </div> 
 
